apps/palworld/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palworld-tailscale
  namespace: palworld
  annotations:
    tailscale.com/proxy-group: heimdall
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"
spec:
  tls:
  - hosts:
    - palworld-admin
  defaultBackend:
    service:
      name: palworld
      port:
        name: rest-api
  ingressClassName: tailscale
